--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24258,18 +24258,21 @@ color: var(--bg-color-1);
 /*# sourceMappingURL=style.css.map */
 body::-webkit-scrollbar {
   width: 0.5em;
+	  background: #fff;
 }
  
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	  background: #fff;
 }
  
 body::-webkit-scrollbar-thumb {
-  background: linear-gradient(360deg, #fff , #fff  51%,#fff 85%);
+  background:   background: #fff;
   outline: 1px solid slategrey;
 }
 .side-menu__block-inner::-webkit-scrollbar {
   width: 0.5em;
+	  background: #fff;
 }
  
 .side-menu__block-inner::-webkit-scrollbar-track {
